<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">容量计算器</string>
    <string name="image_path">网络图片路径</string>
    <string name="path_example">http://www.baidu.com/img/bdlogo.gif</string>
    <string name="see">查看</string>
    <string name="action_settings">使用说明(暂无)</string>
    <string name="maliu">码流</string>
    <string name="_512Kbps">512Kbps</string>
    <string name="_1Mbps">1Mbps</string>
    <string name="_1.5Mbps">1.5Mbps</string>
    <string name="_2Mbps">2Mbps</string>
    <string name="_3Mbps">3Mbps</string>
    <string name="_4Mbps">4Mbps</string>
    <string name="_5Mbps">5Mbps</string>
    <string name="_6Mbps">6Mbps</string>
    <string name="_8Mbps">8Mbps</string>
    <string name="input_by_hand">其它:</string>
    <string name="Kbps">Kbps</string>
    <string name="cif">CIF</string>
    <string name="d1">D1</string>
    <string name="_720P">720P\n百万像素</string>
    <string name="_1080P">1080P</string>
    
    
    <string name="b_shuliang_time">数量与时间</string>
    <string name="b_input_lushu">输入路数:</string>
    <string name="b_lu">路</string>
    <string name="b_day">天</string>
    <string name="b_cunchu_time">存储时间:</string>
    <string name="b_crb">CBR冗余:</string>
    <string name="b_percent">%</string>
    <string name="b_crb_tuijian">(推荐110%)</string>
    <string name="b_zongjingrongliang">总净容量为:</string>
    <string name="b_tb">TB</string>
    <string name="b_zongjingrongliang_quzheng">总净容量向上取整后为:</string>
    <string name="b_jisuanrongliang">计算容量</string>
    <string name="b_leiji">累计</string>
    
    
    <string name="c_drive_and_juzhenshu">硬盘与矩阵数</string>
    <string name="c_drive_capacity">硬盘容量:</string>
    <string name="c_3tb">3TB</string>
    <string name="c_2tb">2TB</string>
    <string name="c_1tb">1TB</string>
    <string name="c_input">输入:</string>
    <string name="c_gb">GB</string>
    <string name="c_tb">TB</string>
    <string name="c_raid_panshu">RAID盘数:</string>
    <string name="c_raid_panshu_def">16</string>
    <string name="c_panwei">盘位</string>
    <string name="c_raid_limit">RAID级别:</string>
    <string name="c_raid0">RAID0或不做RAID</string>
    <string name="c_raid1_10">RAID1/RAID10</string>
    <string name="c_raid3_5">RAID2/RAID5</string>
    <string name="c_raid5_1_6">RAID5+1热备盘/RAID6</string>
    <string name="c_raid6_1">RAID6+1热备盘</string>
    
    <string name="c_drive_number">共需硬盘数:</string>
    <string name="c_kuai">块</string>
    <string name="c_drive_number_def"><u>   </u></string>
    <string name="c_panzhen_number">共需盘阵数:</string>
    <string name="c_single_jitou">单机头:</string>
    <string name="c_ge">个</string>
    <string name="c_daikuozhanjitou">带扩展机头</string>
    <string name="c_suoxuanxinghao">每个主机扩展柜数目:</string>
    <string name="c_selected_def">3</string>
    <string name="c_zhanguichanpin">个</string>
    <string name="c_zhujigui">个主机柜,</string>
    <string name="c_gongxuyao">共需要</string>
    <string name="c_geguokuangui">个扩展柜</string>
    <string name="c_jisuanyingpan_and_panzhenshu">计算硬盘与盘阵数</string>
    
    <string name="title">视频监控容量计算器V8.0-中亚联邦-提供中国领先的数据存储解决方案</string>
    <string name="title_1">| 海量数据存储产品与存储解决方案提供商</string>
    <string name="about">关于中亚联邦</string>
    <string name="about_zhongyanlianbang">\nwww.fedstore.com.cn\n\n  中亚联邦（菲斯顿德）科技有限公司是全球领先的存储设备解决方案制造商，运营总部位于中国成都，前身是美国FedStore Stor Corporation。\n\n
中亚联邦的磁盘阵列产品为大中小企业及大规模用户提供高性能、高性价比、高可用性的IPSAN，FCSAN，NAS，NVR等一系列存储产品，并提供完整的数据管理方案，专门针对视频监控网络存储进行优化，可满足永华高性能、高稳定性、高品质存储需求。\n\n
中亚联邦存储产品广泛用于平安城市，智慧交通、智慧城市、安防监控、政府、司法、金融、教育、医院、企业等场景，并为诸多存储厂商与集成商提供OEM服务。\n\n
全国统一服务热线：4000-999-064</string>

    <string name="copyright">版权所有 Copyright(C)2009-2020 中亚联邦 京ICP备10206104号</string>
    
    

</resources>