<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/drive_capacity_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" >

            <RadioButton
                android:id="@+id/drive_capacity_1t_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_1tb" />

            <RadioButton
                android:id="@+id/drive_capacity_2t_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_2tb" />

            <RadioButton
                android:id="@+id/drive_capacity_3t_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_3tb" />

            <RadioButton
                android:id="@+id/drive_capacity_custom_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_input" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/drive_capacity_edittext"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/c_tb" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/drive_capacity_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:onClick="OnButtonClick"
        android:text="OK" />

</RelativeLayout>