<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/data_rate_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <!-- cif -->

                <RadioButton
                    android:id="@+id/_512kbps_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_512Kbps" />

                <!-- d1 -->

                <RadioButton
                    android:id="@+id/_1mbps_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1Mbps" />

                <RadioButton
                    android:id="@+id/_1_5mbps_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1.5Mbps" />

                <RadioButton
                    android:id="@+id/_2mbps_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2Mbps" />

                <!-- 720p -->

                <RadioButton
                    android:id="@+id/_3mbps_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3Mbps" />

                <RadioButton
                    android:id="@+id/_4mbps_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4Mbps" />
                <!-- 720p -->

                <RadioButton
                    android:id="@+id/_5mbps_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5Mbps" />

                <RadioButton
                    android:id="@+id/_6mbps_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6Mbps" />

                <RadioButton
                    android:id="@+id/_8mbps_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8Mbps" />

                <RadioButton
                    android:id="@+id/input_by_hand_radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_by_hand" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical" >

<!--                 <TextView -->
<!--                     android:id="@+id/data_rate_label_textview" -->
<!--                     android:layout_width="match_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_marginBottom="4dp" -->
<!--                     android:gravity="center|right" -->
<!--                     android:text="CIF" -->
<!--                     android:textColor="#808080" -->
<!--                     android:textSize="16sp" /> -->

<!--                 <TextView -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="1dp" -->
<!--                     android:background="#D3D3D3" -->
<!--                     android:enabled="false" /> -->

<!--                 <TextView -->
<!--                     android:layout_width="match_parent" -->
<!--                     android:layout_height="90dp" -->
<!--                     android:layout_marginBottom="4dp" -->
<!--                     android:gravity="center|right" -->
<!--                     android:text="D1" -->
<!--                     android:textColor="#808080" -->
<!--                     android:textSize="16sp" /> -->

<!--                 <TextView -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="1dp" -->
<!--                     android:background="#D3D3D3" -->
<!--                     android:enabled="false" /> -->

<!--                 <TextView -->
<!--                     android:layout_width="match_parent" -->
<!--                     android:layout_height="60dp" -->
<!--                     android:layout_marginBottom="4dp" -->
<!--                     android:gravity="center|right" -->
<!--                     android:text="720P  \n百万像素" -->
<!--                     android:textColor="#808080" -->
<!--                     android:textSize="16sp" /> -->

<!--                 <TextView -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="1dp" -->
<!--                     android:background="#D3D3D3" -->
<!--                     android:enabled="false" /> -->

<!--                 <TextView -->
<!--                     android:layout_width="match_parent" -->
<!--                     android:layout_height="90dp" -->
<!--                     android:layout_marginBottom="4dp" -->
<!--                     android:gravity="center|right" -->
<!--                     android:text="1080P" -->
<!--                     android:textColor="#808080" -->
<!--                     android:textSize="16sp" /> -->

<!--                 <TextView -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="1dp" -->
<!--                     android:background="#D3D3D3" -->
<!--                     android:enabled="false" /> -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/custom_data_rate_edittext"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:inputType="number"
                        android:labelFor="@+id/input_by_hand_val"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/custom_data_rate_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/Kbps" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/data_rate_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="确定" />
    </LinearLayout>

</ScrollView>